--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@ body {
   <tr>
     <td bgcolor="#000000"><table width="909" border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td width="95"><a href="go:menus"><img src="https://i.postimg.cc/rwrdPwtQ/inicio2.png.png" width="81" height="84" border="0" /></a></td>
+        <td width="95"><a href="go:menus"><img src="https://i.postimg.cc/rwrdPwtQ/inicio2.png.png" width="81" height="84" border="0" /></a><a href="go:menus"></a></td>
         <td width="94"><a href="go:premium"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/premium2.png" width="81" height="84" border="0" /></a></td>
         <td width="94"><a href="go:samsungtv"><img src="https://i.postimg.cc/CLR16pWN/samsungtv2.png" width="81" height="84" border="0" /></a></td>
-        <td width="91"><a href="go:plex"><img src="https://i.postimg.cc/jj2xn1GD/plex2.png" width="81" height="84" border="0" /></a></td>
-        <td width="90"><a href="go:plutotv"><img src="https://i.postimg.cc/Nf3VTsxS/pluto2.png" width="81" height="84" border="0" /></a></td>
-        <td width="89"><a href="go:infantil"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/infantil2.png" width="81" height="84" border="0" /></a></td>
-        <td width="91"><a href="go:mexicos"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/tv2.png" width="81" height="84" border="0" /></a></td>
-        <td width="90"><a href="go:pais"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/pais2.png" width="81" height="84" border="0" /></a></td>
+        <td width="91"><a href="go:plex"><img src="https://i.postimg.cc/jj2xn1GD/plex2.png" width="81" height="84" border="0" /></a><a href="go:plutotv"></a></td>
+        <td width="90"><a href="go:infantil"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/infantil2.png" width="81" height="84" border="0" /></a></td>
+        <td width="89"><a href="go:mexicos"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/tv2.png" width="81" height="84" border="0" /></a></td>
+        <td width="91"><a href="go:pais"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/pais2.png" width="81" height="84" border="0" /></a></td>
+        <td width="90"><a href="go:cines"><img src="https://i.ibb.co/WHsBTkp/pelis2.png" width="81" height="84" border="0" /></a></td>
         <td width="89"><a href="go:musica"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/musica2.png" width="81" height="84" border="0" /></a><a href="go:depo"></a></td>
         <td width="86"><a href="go:noticias"><img src="https://raw.githubusercontent.com/yeyomx/demo/main/mundolatino/noticias2.png" width="81" height="84" border="0" /></a></td>
       </tr>
